Solve problem using Java